add the next six

--- a/mainnet/2025-07-13-budget-2025/EC/EC-0007-25-utxo-rpc/EC-0007-25.jsonld.md
+++ b/mainnet/2025-07-13-budget-2025/EC/EC-0007-25-utxo-rpc/EC-0007-25.jsonld.md
@@ -1,16 +1,12 @@
 # Title
 
-Withdraw ₳1,300,000 for Blockfrost Platform community budget proposal
+Withdraw ₳220,914 for UTxO RPC: Sustaining Cardano Blockchain Integration
 
 # Abstract
 
-This treasury withdrawal funds **Blockfrost Platform community budget proposal** which will provide the following services
+This treasury withdrawal funds **UTxO RPC: Sustaining Cardano Blockchain Integration** which will provide the following services:
 
-Blockfrost is a powerful API platform that gives anyone access to the Cardano Blockchain and functionality without the need to run your own Node.
-
-Our API is designed with developers in mind, and offers tools that remove the complexity of direct node interactions, so anyone can start building on Cardano and launch projects on an affordable, stable and user-friendly framework.
-
-Blockfrost was originally developed by Five Binaries and is now maintained under the IOG umbrella.
+Th[is request for support focuses on UTxO RPC [https://utxorpc.org](https://utxorpc.org) an interface specification designed to simplify interactions with UTxO-based blockchains. U5C defines standardized methods, data structures, and communication patterns. By providing a range of SDKs, and offering thorough documentation, U5C enhances reusability, interoperability, and performance in blockchain integrations. Currently in its early stages, UTxO RPC is already being adopted by key projects in the Cardano ecosystem, including Lace, Mesh, Amaru, and many others. As an open-source initiative, it welcomes contributions from the community, fostering a collaborative approach to improving blockchain infrastructure. To support its ongoing development, maintenance, and enhancements, we are requesting funding for the following roles: 0.5 FTE blockchain developer and 0.125 FTE tech lead.]{.mark}
 
 This Treasury Withdrawal is submitted by Intersect on behalf of the vendor. The following sections; Abstract, Motivation, Rationale and Vendor Profile have been sourced from the approved proposal submitted by the Vendor as part of the Intersect budget process.
 
@@ -20,43 +16,31 @@ This treasury withdrawal funds one of 39 proposals to give effect to the approve
 
 This proposal aims to solve the following problem:
 
-The demand for a reliable infrastructure and tools that support development is what led to the creation of Blockfrost. If you have interacted with the Cardano Blockchain, there is a good chance you were interacting with Blockfrost in the background.
-
-But this level of adoption has come with some trade-offs. At it's peak, Blockfrost was handling over 50% of all on-chain transactions on Cardano. We recognize this concentration is in contrast to the decentralized nature of the blockchain, and have actively been working to decentralize Blockfrost for the benefit of the Cardano community.
-
-Together with Stake Pool Operators (SPOs) and node operators, we have started the initial phase of what we call the Icebreakers era, an incentivized program designed to decentralize Cardano data access and reward the incredible node operator community.
+UTxO RPC simplifies interactions with UTxO-based blockchains by providing a standardized interface for blockchain integrations. It enhances interoperability, reusability, and performance for developers, and has already seen adoption by major Cardano projects like Lace, Mesh, and Amaru. To fully unlock its potential for the Cardano community, UTxO RPC requires ongoing maintenance and enhancements. This proposal seeks funding to keep it active, up-to-date, and aligned with the evolving needs of the ecosystem.
 
 # Rationale
 
 ### Project Solution
 
-**The Icebreakers**
-
-The Icebreakers is a decentralized network of endpoints that allow developers to access Cardano data through a set of reliable node operators, instead of relying on a single centralized source.
-
-By joining the Icebreaker program, SPOs and other Cardano node operators can monetize their existing infrastructure by processing API requests as part of the Blockfrost network.
-
-**Deliverables**
-
-To ensure transparency and to prevent vendor lock-in, we are open-sourcing all components of the deliverables. This includes the infrastructure, libraries and documentation.
-
-Our primary focus is on two key projects: The Blockfrost Platform and the Blockfrost Gateway. Both are designed to expand the capabilities of the Icebreaker network.
-
-**Blockfrost Platform**
-
-The Blockfrost platform is a next-generation backend designed to run on existing SPO relays, utilizing existing resources and rewarding operators with a share of Blockfrost's current revenue by serving our existing customers.
-
-**Blockfrost Gateway**
-
-The Blockfrost gateway is the entry point for individual SPOs running the Blockfrost platform. Through the gateway, SPOs can receive requests from Blockfrost users. In return for processing these requests, they earn a share of the revenue.
-
-With the Blockfrost Gateway, anyone can run their own Blockfrost instance with their own platform. We plan to use Hydra to open micro-payment channels between parties, enabling them to exchange ADA or other tokens for their services.
-
-We are also developing the Solitary mode, which is designed for teams that require full ownership of their environment. Developers and enterprise customers can deploy a customized and independent Blockfrost instance with complete control of the infrastructure, uptime and security.
+Securing funding for UTxO RPC ensures it remains actively maintained and continues to evolve with the Cardano ecosystem's needs. Ongoing updates, performance improvements, and new feature development will ensure the interface stays relevant and effective. This support will help simplify blockchain integrations, reduce complexity for developers, and improve overall performance, making it easier for new projects to adopt UTxO RPC. With continued maintenance, UTxO RPC can better serve the ecosystem and support long-term developer needs.
 
 ### Vendor Profile
 
-Blockfrost is a powerful API platform that gives anyone access to the Cardano Blockchain and functionality without the need to run your own Node. Blockfrost aims to decentralize its Cardano Blockchain API through the Blockfrost Platform and Blockfrost Gateway, enabling a network of Icebreakers operated by SPOs and node operators to process API requests and share revenue. All components are open-sourced to ensure transparency and avoid vendor lock-in.
+TxPipe is an active member of the Cardano ecosystem
+
+TxPipe has been developing open-source tools for the Cardano ecosystem for over 3 years and we're not going anywhere. Evidence of our commitment can be found by evaluating the continuous activity of our public code repositories.
+
+Experience developing in the Cardano ecosystem
+
+TxPipe has helped developed several dApps for the Cardano ecosystem. This experience allows us to evaluate the feasibility of the project and its potential benefit from a developer's perspective. We've also participated in development of chains using the released version of the IOG's Partnerchain SDK.
+
+Successful Catalyst proposals
+
+We have successfully completed several Catalyst proposals. This may serve as evidence that our team has the required capabilities to fulfill these type of projects.
+
+Development process will be public and open-source
+
+Both the output and the development process will be public and open-source. This approach provides an easy way for the Catalyst team and the Cardano community to evaluate the progress at each step of the process.
 
 ### Contract Management
 
@@ -122,14 +106,9 @@ The subsections; Contract Management, Project Delivery, and Budget Management To
 
 # References
 
-- [Github budget proposal link request](https://github.com/blockfrost/blockfrost-platform/pull/310)
-- [Github budget proposal rendered version](https://mmahut-2025budget.blockfrost-platform.pages.dev/budget)
-- [Blockfrost.io](https://blockfrost.io/)
-- [Blockfrost platform Github repository](https://github.com/blockfrost/blockfrost-platform)
-- [Icebreakers public Grafana dashboard](https://icebreakers.blockfrost.io/)
-- [Blockfrost.io X account](https://x.com/blockfrost_io)
-- [Project Proposal In Ekklesia](https://2025budget.intersectmbo.org/ballots/680d1b63565577986442d123/proposals/680d1b63565577986442d14a)
-- [Approved Budget Info Action submitted by Intersect](https://gov.tools/outcomes/governance_actions/e14de8d9dc4f4ddf3fe9250a8a926e20f10e99b86bd0610b77d7a054981591ee#0)
+- [TxPipe UTxO RPC Github Repository](https://github.com/utxorpc)
+- [Project Proposal In Ekklesia](https://2025budget.intersectmbo.org/ballots/680d1b63565577986442d123/proposals/680d1b64565577986442d298)
+- [Approved Budget Info Action submitted by Intersect via GovTool](https://gov.tools/outcomes/governance_actions/e14de8d9dc4f4ddf3fe9250a8a926e20f10e99b86bd0610b77d7a054981591ee#0)
 - [Details of all successful proposals (CSV)](ipfs://bafybeicwrop4q7xvnyjdd5drumbe56sqtm5lbe2ul3c262zt4hgguzdycm)
 - [Automating Accountability: Cardano's Smart Contract Framework Blog](ipfs://bafybeihqx4ae72z7suqfnxrpqpqithp43cai7o2uuewnqtezgaoyc3ptyq)
 - [Sundae Labs Budget Management Smart Contracts Github Repository](https://github.com/SundaeSwap-finance/treasury-contracts)
