--- a/mainnet/2025-07-13-budget-2025/EC/EC-0008-25-lucid/EC-0008-25.jsonld.md
+++ b/mainnet/2025-07-13-budget-2025/EC/EC-0008-25-lucid/EC-0008-25.jsonld.md
@@ -1,16 +1,14 @@
 # Title
 
-Withdraw ₳1,300,000 for Blockfrost Platform community budget proposal
+Withdraw ₳130,903 for Lucid Evolution Maintenance administered by Intersect
 
 # Abstract
 
-This treasury withdrawal funds **Blockfrost Platform community budget proposal** which will provide the following services
+This treasury withdrawal funds **Lucid Evolution Maintenance** which will provide the following services:
 
-Blockfrost is a powerful API platform that gives anyone access to the Cardano Blockchain and functionality without the need to run your own Node.
+Lucid Evolution is an open-source library designed to simplify and enhance the development of off-chain smart contract interactions on Cardano. As the official maintainer of Lucid, Anastasia Labs is committed to evolving the library ensuring long-term support and usability for developers.
 
-Our API is designed with developers in mind, and offers tools that remove the complexity of direct node interactions, so anyone can start building on Cardano and launch projects on an affordable, stable and user-friendly framework.
-
-Blockfrost was originally developed by Five Binaries and is now maintained under the IOG umbrella.
+This proposal seeks funding to support ongoing development, maintenance, and ecosystem adoption efforts, including compatibility updates, feature enhancements, and developer documentation. By securing funding, Lucid Evolution will continue to serve as a critical tool for DApp developers, improving accessibility and efficiency within the Cardano ecosystem.
 
 This Treasury Withdrawal is submitted by Intersect on behalf of the vendor. The following sections; Abstract, Motivation, Rationale and Vendor Profile have been sourced from the approved proposal submitted by the Vendor as part of the Intersect budget process.
 
@@ -20,43 +18,33 @@ This treasury withdrawal funds one of 39 proposals to give effect to the approve
 
 This proposal aims to solve the following problem:
 
-The demand for a reliable infrastructure and tools that support development is what led to the creation of Blockfrost. If you have interacted with the Cardano Blockchain, there is a good chance you were interacting with Blockfrost in the background.
+One of the most used offchain library called Lucid Evolution needs constant maintenance and upgrades. We would like to make sure this library stays up to date with all of the changes and upgrades of the Cardano network.
 
-But this level of adoption has come with some trade-offs. At it's peak, Blockfrost was handling over 50% of all on-chain transactions on Cardano. We recognize this concentration is in contrast to the decentralized nature of the blockchain, and have actively been working to decentralize Blockfrost for the benefit of the Cardano community.
+This project is completely open source.
 
-Together with Stake Pool Operators (SPOs) and node operators, we have started the initial phase of what we call the Icebreakers era, an incentivized program designed to decentralize Cardano data access and reward the incredible node operator community.
+[https://github.com/Anastasia-Labs/lucid-evolution](https://github.com/Anastasia-Labs/lucid-evolution)
 
 # Rationale
 
 ### Project Solution
 
-**The Icebreakers**
+This project significantly benefits the Cardano community by providing reliable tools for developers:
 
-The Icebreakers is a decentralized network of endpoints that allow developers to access Cardano data through a set of reliable node operators, instead of relying on a single centralized source.
+Increased Efficiency, allowing developers to focus on building and optimizing their applications.
 
-By joining the Icebreaker program, SPOs and other Cardano node operators can monetize their existing infrastructure by processing API requests as part of the Blockfrost network.
+Enhanced Quality: Reliable testing environments that lead to more robust and secure smart contracts, contributing to the network's overall health.
 
-**Deliverables**
-
-To ensure transparency and to prevent vendor lock-in, we are open-sourcing all components of the deliverables. This includes the infrastructure, libraries and documentation.
-
-Our primary focus is on two key projects: The Blockfrost Platform and the Blockfrost Gateway. Both are designed to expand the capabilities of the Icebreaker network.
-
-**Blockfrost Platform**
-
-The Blockfrost platform is a next-generation backend designed to run on existing SPO relays, utilizing existing resources and rewarding operators with a share of Blockfrost's current revenue by serving our existing customers.
-
-**Blockfrost Gateway**
-
-The Blockfrost gateway is the entry point for individual SPOs running the Blockfrost platform. Through the gateway, SPOs can receive requests from Blockfrost users. In return for processing these requests, they earn a share of the revenue.
-
-With the Blockfrost Gateway, anyone can run their own Blockfrost instance with their own platform. We plan to use Hydra to open micro-payment channels between parties, enabling them to exchange ADA or other tokens for their services.
-
-We are also developing the Solitary mode, which is designed for teams that require full ownership of their environment. Developers and enterprise customers can deploy a customized and independent Blockfrost instance with complete control of the infrastructure, uptime and security.
+Documentation: Comprehensive guides and tutorials helping onboard new developers to our ecosystem
 
 ### Vendor Profile
 
-Blockfrost is a powerful API platform that gives anyone access to the Cardano Blockchain and functionality without the need to run your own Node. Blockfrost aims to decentralize its Cardano Blockchain API through the Blockfrost Platform and Blockfrost Gateway, enabling a network of Icebreakers operated by SPOs and node operators to process API requests and share revenue. All components are open-sourced to ensure transparency and avoid vendor lock-in.
+Anastasia Labs is at the forefront of research & development on Cardano for over two years now. We have been involved in the development of nearly every large dApp on Cardano. We have made contributions to many of the core repos, and we actively maintain over 50 different open-source libraries, tools, and public infrastructure for Cardano.
+
+You can read more about our work here:
+
+[https://www.anastasialabs.com/](https://www.anastasialabs.com/)
+
+Furthermore, Midgard is already in active development, and we have already made significant progress towards our goal of EOY mainnet readiness.
 
 ### Contract Management
 
@@ -122,14 +110,9 @@ The subsections; Contract Management, Project Delivery, and Budget Management To
 
 # References
 
-- [Github budget proposal link request](https://github.com/blockfrost/blockfrost-platform/pull/310)
-- [Github budget proposal rendered version](https://mmahut-2025budget.blockfrost-platform.pages.dev/budget)
-- [Blockfrost.io](https://blockfrost.io/)
-- [Blockfrost platform Github repository](https://github.com/blockfrost/blockfrost-platform)
-- [Icebreakers public Grafana dashboard](https://icebreakers.blockfrost.io/)
-- [Blockfrost.io X account](https://x.com/blockfrost_io)
-- [Project Proposal In Ekklesia](https://2025budget.intersectmbo.org/ballots/680d1b63565577986442d123/proposals/680d1b63565577986442d14a)
-- [Approved Budget Info Action submitted by Intersect](https://gov.tools/outcomes/governance_actions/e14de8d9dc4f4ddf3fe9250a8a926e20f10e99b86bd0610b77d7a054981591ee#0)
+- [Anastasia Labs Lucid Evolution Github Repository](https://anastasia-labs.github.io/lucid-evolution)
+- [Project Proposal In Ekklesia](https://2025budget.intersectmbo.org/ballots/680d1b63565577986442d123/proposals/680d1b64565577986442d280)
+- [Approved Budget Info Action submitted by Intersect via GovTool](https://gov.tools/outcomes/governance_actions/e14de8d9dc4f4ddf3fe9250a8a926e20f10e99b86bd0610b77d7a054981591ee#0)
 - [Details of all successful proposals (CSV)](ipfs://bafybeicwrop4q7xvnyjdd5drumbe56sqtm5lbe2ul3c262zt4hgguzdycm)
 - [Automating Accountability: Cardano's Smart Contract Framework Blog](ipfs://bafybeihqx4ae72z7suqfnxrpqpqithp43cai7o2uuewnqtezgaoyc3ptyq)
 - [Sundae Labs Budget Management Smart Contracts Github Repository](https://github.com/SundaeSwap-finance/treasury-contracts)
