--- a/mainnet/2025-07-13-budget-2025/EC/EC-0009-25-zk-rollup/EC-0009-25.jsonld.md
+++ b/mainnet/2025-07-13-budget-2025/EC/EC-0009-25-zk-rollup/EC-0009-25.jsonld.md
@@ -1,16 +1,14 @@
 # Title
 
-Withdraw ₳1,300,000 for Blockfrost Platform community budget proposal
+Withdraw ₳1,161,000 for zkFold ZK Rollup administered by Intersect
 
 # Abstract
 
-This treasury withdrawal funds **Blockfrost Platform community budget proposal** which will provide the following services
+This treasury withdrawal funds zkFold ZK Rollup which will provide the following services:
 
-Blockfrost is a powerful API platform that gives anyone access to the Cardano Blockchain and functionality without the need to run your own Node.
+ZK rollups address the scalability problem. Hundreds of transactions can be submitted as a single batch, reducing the load on the L1. Cardano can achieve higher throughput and lower transaction costs.
 
-Our API is designed with developers in mind, and offers tools that remove the complexity of direct node interactions, so anyone can start building on Cardano and launch projects on an affordable, stable and user-friendly framework.
-
-Blockfrost was originally developed by Five Binaries and is now maintained under the IOG umbrella.
+zkFold offers to build a general-purpose zero knowledge rollup solution for Cardano. A zero knowledge rollup is a technological layer (Layer 2) on top of a blockchain that increases the blockchain's scalability potential by compressing many transactions into transaction batches. As batches offer a greater degree of information compression, it is reasonable to expect that hundreds of rollup smart contract transactions might fit into a single Cardano mainnet transaction. Zero knowledge proofs technology places a limit on the cost of on-chain verification of the validity of transaction batches. Specifically, the batch verification fits well within the Execution Unit limits set at the protocol level, as demonstrated by the prototype created by the zkFold team.
 
 This Treasury Withdrawal is submitted by Intersect on behalf of the vendor. The following sections; Abstract, Motivation, Rationale and Vendor Profile have been sourced from the approved proposal submitted by the Vendor as part of the Intersect budget process.
 
@@ -20,43 +18,29 @@ This treasury withdrawal funds one of 39 proposals to give effect to the approve
 
 This proposal aims to solve the following problem:
 
-The demand for a reliable infrastructure and tools that support development is what led to the creation of Blockfrost. If you have interacted with the Cardano Blockchain, there is a good chance you were interacting with Blockfrost in the background.
-
-But this level of adoption has come with some trade-offs. At it's peak, Blockfrost was handling over 50% of all on-chain transactions on Cardano. We recognize this concentration is in contrast to the decentralized nature of the blockchain, and have actively been working to decentralize Blockfrost for the benefit of the Cardano community.
-
-Together with Stake Pool Operators (SPOs) and node operators, we have started the initial phase of what we call the Icebreakers era, an incentivized program designed to decentralize Cardano data access and reward the incredible node operator community.
+Scalability is a challenge for Cardano. As it grows, more dApps and users join, the demand for processing capacity increases, leading to congestion, slower transaction times, and higher fees.
 
 # Rationale
 
 ### Project Solution
 
-**The Icebreakers**
+zkFold will develop and implement ZK rollups on Cardano to scale it efficiently, promoting broader adoption and supporting an ecosystem of decentralized applications and services.
 
-The Icebreakers is a decentralized network of endpoints that allow developers to access Cardano data through a set of reliable node operators, instead of relying on a single centralized source.
+Overall, the proposal will have the following positive impact on the Cardano ecosystem:
 
-By joining the Icebreaker program, SPOs and other Cardano node operators can monetize their existing infrastructure by processing API requests as part of the Blockfrost network.
+- Improved Scalability: ZK rollups enable Cardano to process significantly more transactions per second (TPS) by bundling and verifying transactions off-chain. This reduces congestion, benefiting users by ensuring faster and more efficient dApp interactions.
 
-**Deliverables**
+- Lower Transaction Costs: By reducing the number of transactions directly processed on-chain, ZK rollups lower the transaction fees, making Cardano more accessible and affordable, especially for smaller transactions or micro-payments.
 
-To ensure transparency and to prevent vendor lock-in, we are open-sourcing all components of the deliverables. This includes the infrastructure, libraries and documentation.
+- Enhanced User Experience: Lower fees create a smoother experience for users interacting with dApps, decentralized finance (DeFi) platforms, and NFT marketplaces.
 
-Our primary focus is on two key projects: The Blockfrost Platform and the Blockfrost Gateway. Both are designed to expand the capabilities of the Icebreaker network.
+- Increased Adoption: ZK rollups can make the Cardano ecosystem more attractive for developers and users, promoting the growth of dApps, DeFi, and other blockchain applications by offering higher performance and scalability.
 
-**Blockfrost Platform**
-
-The Blockfrost platform is a next-generation backend designed to run on existing SPO relays, utilizing existing resources and rewarding operators with a share of Blockfrost's current revenue by serving our existing customers.
-
-**Blockfrost Gateway**
-
-The Blockfrost gateway is the entry point for individual SPOs running the Blockfrost platform. Through the gateway, SPOs can receive requests from Blockfrost users. In return for processing these requests, they earn a share of the revenue.
-
-With the Blockfrost Gateway, anyone can run their own Blockfrost instance with their own platform. We plan to use Hydra to open micro-payment channels between parties, enabling them to exchange ADA or other tokens for their services.
-
-We are also developing the Solitary mode, which is designed for teams that require full ownership of their environment. Developers and enterprise customers can deploy a customized and independent Blockfrost instance with complete control of the infrastructure, uptime and security.
+- Maintained Security: ZK rollups allow for scalability improvements without compromising the security and decentralization of the Cardano base layer, as Cardano still plays the role of the settlement layer for the rollup transactions.
 
 ### Vendor Profile
 
-Blockfrost is a powerful API platform that gives anyone access to the Cardano Blockchain and functionality without the need to run your own Node. Blockfrost aims to decentralize its Cardano Blockchain API through the Blockfrost Platform and Blockfrost Gateway, enabling a network of Icebreakers operated by SPOs and node operators to process API requests and share revenue. All components are open-sourced to ensure transparency and avoid vendor lock-in.
+zkFold team has successfully moving towards the TestNet of our ZK Rollup. The zkFold team consists of expert Haskell, Rust, and ZKP developers and Cryptographers.
 
 ### Contract Management
 
@@ -122,14 +106,8 @@ The subsections; Contract Management, Project Delivery, and Budget Management To
 
 # References
 
-- [Github budget proposal link request](https://github.com/blockfrost/blockfrost-platform/pull/310)
-- [Github budget proposal rendered version](https://mmahut-2025budget.blockfrost-platform.pages.dev/budget)
-- [Blockfrost.io](https://blockfrost.io/)
-- [Blockfrost platform Github repository](https://github.com/blockfrost/blockfrost-platform)
-- [Icebreakers public Grafana dashboard](https://icebreakers.blockfrost.io/)
-- [Blockfrost.io X account](https://x.com/blockfrost_io)
-- [Project Proposal In Ekklesia](https://2025budget.intersectmbo.org/ballots/680d1b63565577986442d123/proposals/680d1b63565577986442d14a)
-- [Approved Budget Info Action submitted by Intersect](https://gov.tools/outcomes/governance_actions/e14de8d9dc4f4ddf3fe9250a8a926e20f10e99b86bd0610b77d7a054981591ee#0)
+- [Project Proposal In Ekklesia](https://2025budget.intersectmbo.org/ballots/680d1b63565577986442d123/proposals/680d1b63565577986442d1c4)
+- [Approved Budget Info Action submitted by Intersect via GovTool](https://gov.tools/outcomes/governance_actions/e14de8d9dc4f4ddf3fe9250a8a926e20f10e99b86bd0610b77d7a054981591ee#0)
 - [Details of all successful proposals (CSV)](ipfs://bafybeicwrop4q7xvnyjdd5drumbe56sqtm5lbe2ul3c262zt4hgguzdycm)
 - [Automating Accountability: Cardano's Smart Contract Framework Blog](ipfs://bafybeihqx4ae72z7suqfnxrpqpqithp43cai7o2uuewnqtezgaoyc3ptyq)
 - [Sundae Labs Budget Management Smart Contracts Github Repository](https://github.com/SundaeSwap-finance/treasury-contracts)
