--- a/mainnet/2025-07-13-budget-2025/EC/EC-0010-25-dolos/EC-0010-25.jsonld.md
+++ b/mainnet/2025-07-13-budget-2025/EC/EC-0010-25-dolos/EC-0010-25.jsonld.md
@@ -1,16 +1,12 @@
 # Title
 
-Withdraw ₳1,300,000 for Blockfrost Platform community budget proposal
+Withdraw ₳220,914 for Dolos: Sustaining a Lightweight Cardano Data Node
 
 # Abstract
 
-This treasury withdrawal funds **Blockfrost Platform community budget proposal** which will provide the following services
+This treasury withdrawal funds **Dolos: Sustaining a Lightweight Cardano Data Node** which will provide the following services:
 
-Blockfrost is a powerful API platform that gives anyone access to the Cardano Blockchain and functionality without the need to run your own Node.
-
-Our API is designed with developers in mind, and offers tools that remove the complexity of direct node interactions, so anyone can start building on Cardano and launch projects on an affordable, stable and user-friendly framework.
-
-Blockfrost was originally developed by Five Binaries and is now maintained under the IOG umbrella.
+This request for support focuses on Dolos [https://dolos.txpipe.io/](https://dolos.txpipe.io/) a lightweight Cardano data node, designed as a backend for dApps. It is fine-tuned to solve a very narrow scope: keeping an updated copy of the ledger and replying to queries from trusted clients. Unlike a full Cardano node, Dolos is optimized for minimal resource usage while maintaining high data integrity and responsiveness. As an open-source project, Dolos has been steadily growing in adoption, with 366 commits, 367 pull requests, and contributions from 21 developers. It is becoming a key tool for projects seeking efficient blockchain data access without the overhead of full-node infrastructure. To ensure Dolos continues to evolve alongside Cardano's ecosystem, we are requesting funding for the following roles: 0.5 FTE Blockchain Developer and 0.125 FTE Tech Lead.
 
 This Treasury Withdrawal is submitted by Intersect on behalf of the vendor. The following sections; Abstract, Motivation, Rationale and Vendor Profile have been sourced from the approved proposal submitted by the Vendor as part of the Intersect budget process.
 
@@ -20,43 +16,31 @@ This treasury withdrawal funds one of 39 proposals to give effect to the approve
 
 This proposal aims to solve the following problem:
 
-The demand for a reliable infrastructure and tools that support development is what led to the creation of Blockfrost. If you have interacted with the Cardano Blockchain, there is a good chance you were interacting with Blockfrost in the background.
-
-But this level of adoption has come with some trade-offs. At it's peak, Blockfrost was handling over 50% of all on-chain transactions on Cardano. We recognize this concentration is in contrast to the decentralized nature of the blockchain, and have actively been working to decentralize Blockfrost for the benefit of the Cardano community.
-
-Together with Stake Pool Operators (SPOs) and node operators, we have started the initial phase of what we call the Icebreakers era, an incentivized program designed to decentralize Cardano data access and reward the incredible node operator community.
+Dolos is a specialized Cardano data node designed to maintain an updated copy of the ledger and respond efficiently to queries. Optimized for data integrity and speed, it provides developers with reliable blockchain data access while requiring a fraction of the resources of a full node. Over the past year, Dolos has gained adoption within the Cardano ecosystem, with an active open-source community contributing to its growth. To continue improving its efficiency, maintaining compatibility with Cardano upgrades, and expanding its capabilities, ongoing development and maintenance are necessary. This proposal seeks funding to ensure Dolos remains actively supported, optimized, and available for the growing number of projects relying on it.
 
 # Rationale
 
 ### Project Solution
 
-**The Icebreakers**
-
-The Icebreakers is a decentralized network of endpoints that allow developers to access Cardano data through a set of reliable node operators, instead of relying on a single centralized source.
-
-By joining the Icebreaker program, SPOs and other Cardano node operators can monetize their existing infrastructure by processing API requests as part of the Blockfrost network.
-
-**Deliverables**
-
-To ensure transparency and to prevent vendor lock-in, we are open-sourcing all components of the deliverables. This includes the infrastructure, libraries and documentation.
-
-Our primary focus is on two key projects: The Blockfrost Platform and the Blockfrost Gateway. Both are designed to expand the capabilities of the Icebreaker network.
-
-**Blockfrost Platform**
-
-The Blockfrost platform is a next-generation backend designed to run on existing SPO relays, utilizing existing resources and rewarding operators with a share of Blockfrost's current revenue by serving our existing customers.
-
-**Blockfrost Gateway**
-
-The Blockfrost gateway is the entry point for individual SPOs running the Blockfrost platform. Through the gateway, SPOs can receive requests from Blockfrost users. In return for processing these requests, they earn a share of the revenue.
-
-With the Blockfrost Gateway, anyone can run their own Blockfrost instance with their own platform. We plan to use Hydra to open micro-payment channels between parties, enabling them to exchange ADA or other tokens for their services.
-
-We are also developing the Solitary mode, which is designed for teams that require full ownership of their environment. Developers and enterprise customers can deploy a customized and independent Blockfrost instance with complete control of the infrastructure, uptime and security.
+Securing funding for Dolos will ensure its continued maintenance, optimization, and feature expansion, directly benefiting projects that rely on fast and lightweight access to Cardano ledger data. Continued improvements will enhance performance, reduce infrastructure overhead, and support a broader range of use cases. By keeping Dolos actively maintained, the Cardano developer community gains a robust and efficient alternative to traditional node setups, lowering operational costs and improving blockchain data accessibility.
 
 ### Vendor Profile
 
-Blockfrost is a powerful API platform that gives anyone access to the Cardano Blockchain and functionality without the need to run your own Node. Blockfrost aims to decentralize its Cardano Blockchain API through the Blockfrost Platform and Blockfrost Gateway, enabling a network of Icebreakers operated by SPOs and node operators to process API requests and share revenue. All components are open-sourced to ensure transparency and avoid vendor lock-in.
+TxPipe is an active member of the Cardano ecosystem
+
+TxPipe has been developing open-source tools for the Cardano ecosystem for over 3 years and we're not going anywhere. Evidence of our commitment can be found by evaluating the continuous activity of our public code repositories.
+
+Experience developing in the Cardano ecosystem
+
+TxPipe has helped developed several dApps for the Cardano ecosystem. This experience allows us to evaluate the feasibility of the project and its potential benefit from a developer's perspective. We've also participated in development of chains using the released version of the IOG's Partnerchain SDK.
+
+Successful Catalyst proposals
+
+We have successfully completed several Catalyst proposals. This may serve as evidence that our team has the required capabilities to fulfill these type of projects.
+
+Development process will be public and open-source
+
+Both the output and the development process will be public and open-source. This approach provides an easy way for the Catalyst team and the Cardano community to evaluate the progress at each step of the process.
 
 ### Contract Management
 
@@ -122,14 +106,9 @@ The subsections; Contract Management, Project Delivery, and Budget Management To
 
 # References
 
-- [Github budget proposal link request](https://github.com/blockfrost/blockfrost-platform/pull/310)
-- [Github budget proposal rendered version](https://mmahut-2025budget.blockfrost-platform.pages.dev/budget)
-- [Blockfrost.io](https://blockfrost.io/)
-- [Blockfrost platform Github repository](https://github.com/blockfrost/blockfrost-platform)
-- [Icebreakers public Grafana dashboard](https://icebreakers.blockfrost.io/)
-- [Blockfrost.io X account](https://x.com/blockfrost_io)
-- [Project Proposal In Ekklesia](https://2025budget.intersectmbo.org/ballots/680d1b63565577986442d123/proposals/680d1b63565577986442d14a)
-- [Approved Budget Info Action submitted by Intersect](https://gov.tools/outcomes/governance_actions/e14de8d9dc4f4ddf3fe9250a8a926e20f10e99b86bd0610b77d7a054981591ee#0)
+- [TxPipe Dolos GitHub Repository](https://github.com/txpipe/dolos)
+- [Project Proposal In Ekklesia](https://2025budget.intersectmbo.org/ballots/680d1b63565577986442d123/proposals/680d1b64565577986442d29a)
+- [Approved Budget Info Action submitted by Intersect via GovTool](https://gov.tools/outcomes/governance_actions/e14de8d9dc4f4ddf3fe9250a8a926e20f10e99b86bd0610b77d7a054981591ee#0)
 - [Details of all successful proposals (CSV)](ipfs://bafybeicwrop4q7xvnyjdd5drumbe56sqtm5lbe2ul3c262zt4hgguzdycm)
 - [Automating Accountability: Cardano's Smart Contract Framework Blog](ipfs://bafybeihqx4ae72z7suqfnxrpqpqithp43cai7o2uuewnqtezgaoyc3ptyq)
 - [Sundae Labs Budget Management Smart Contracts Github Repository](https://github.com/SundaeSwap-finance/treasury-contracts)
