--- a/mainnet/2025-07-13-budget-2025/EC/EC-0011-25-ledger-app/EC-0011-25.jsonld.md
+++ b/mainnet/2025-07-13-budget-2025/EC/EC-0011-25-ledger-app/EC-0011-25.jsonld.md
@@ -1,62 +1,32 @@
 # Title
 
-Withdraw ₳1,300,000 for Blockfrost Platform community budget proposal
+Withdraw ₳300,000 for Ledger App Rewrite administered by Intersect
 
 # Abstract
 
-This treasury withdrawal funds **Blockfrost Platform community budget proposal** which will provide the following services
+This treasury withdrawal funds **Ledger App Rewrite** which will provide the following services:
 
-Blockfrost is a powerful API platform that gives anyone access to the Cardano Blockchain and functionality without the need to run your own Node.
-
-Our API is designed with developers in mind, and offers tools that remove the complexity of direct node interactions, so anyone can start building on Cardano and launch projects on an affordable, stable and user-friendly framework.
-
-Blockfrost was originally developed by Five Binaries and is now maintained under the IOG umbrella.
+Vacuum Labs will work with Ledger team to design new UI according to the expectations. Implement new UI into the Cardano Ledger App. Pass the external audit process (costs for this shall be included in proposal). Support the Ledger team by the release process.
 
 This Treasury Withdrawal is submitted by Intersect on behalf of the vendor. The following sections; Abstract, Motivation, Rationale and Vendor Profile have been sourced from the approved proposal submitted by the Vendor as part of the Intersect budget process.
 
-This treasury withdrawal funds one of 39 proposals to give effect to the approved budget info action for ₳275,269,340, administered by Intersect via gov_action1u9x73kwufaxa70lfy59g4ynwyrcsaxdcd0gxzzmh67s9fxq4j8hqqk2phgh. The information provided herein is intended to fulfill the spirit of the constitutional requirement for a treasury withdrawal info action by also providing the details of the proposed solution, alignment to the budget, and amount to be withdrawn from the Cardano Treasury.
+This treasury withdrawal funds one of 39 proposals to give effect to the approved budget info action for ₳275,269,340, administered by Intersect via gov_action1u9x73kwufaxa70lfy59g4ynwyrcsaxdcd0gxzzmh67s9fxq4j8hqqk2phgh. The information provided herein is intended to fulfill the spirit of the constitutional requirement for a treasury withdrawal info action by providing the details of the proposed solution, alignment to the budget, and amount to be withdrawn from the Cardano Treasury.
 
 # Motivation
 
 This proposal aims to solve the following problem:
 
-The demand for a reliable infrastructure and tools that support development is what led to the creation of Blockfrost. If you have interacted with the Cardano Blockchain, there is a good chance you were interacting with Blockfrost in the background.
-
-But this level of adoption has come with some trade-offs. At it's peak, Blockfrost was handling over 50% of all on-chain transactions on Cardano. We recognize this concentration is in contrast to the decentralized nature of the blockchain, and have actively been working to decentralize Blockfrost for the benefit of the Cardano community.
-
-Together with Stake Pool Operators (SPOs) and node operators, we have started the initial phase of what we call the Icebreakers era, an incentivized program designed to decentralize Cardano data access and reward the incredible node operator community.
+In 2018 when Ledger Cardano App was developed, there was no standard for embedded app UI. Over the years this changed and now Cardano is the only Ledger application with non-standard UI such as requiring double-click several times during the confirmation process. This is causing confusion among users and problems with testing because the design is not compatible with the testing suite.
 
 # Rationale
 
 ### Project Solution
 
-**The Icebreakers**
-
-The Icebreakers is a decentralized network of endpoints that allow developers to access Cardano data through a set of reliable node operators, instead of relying on a single centralized source.
-
-By joining the Icebreaker program, SPOs and other Cardano node operators can monetize their existing infrastructure by processing API requests as part of the Blockfrost network.
-
-**Deliverables**
-
-To ensure transparency and to prevent vendor lock-in, we are open-sourcing all components of the deliverables. This includes the infrastructure, libraries and documentation.
-
-Our primary focus is on two key projects: The Blockfrost Platform and the Blockfrost Gateway. Both are designed to expand the capabilities of the Icebreaker network.
-
-**Blockfrost Platform**
-
-The Blockfrost platform is a next-generation backend designed to run on existing SPO relays, utilizing existing resources and rewarding operators with a share of Blockfrost's current revenue by serving our existing customers.
-
-**Blockfrost Gateway**
-
-The Blockfrost gateway is the entry point for individual SPOs running the Blockfrost platform. Through the gateway, SPOs can receive requests from Blockfrost users. In return for processing these requests, they earn a share of the revenue.
-
-With the Blockfrost Gateway, anyone can run their own Blockfrost instance with their own platform. We plan to use Hydra to open micro-payment channels between parties, enabling them to exchange ADA or other tokens for their services.
-
-We are also developing the Solitary mode, which is designed for teams that require full ownership of their environment. Developers and enterprise customers can deploy a customized and independent Blockfrost instance with complete control of the infrastructure, uptime and security.
+Ledger wallet users will have better Cardano experience. Further app updates and releases will be faster and cheaper due to Ledger testing suite compatibility.
 
 ### Vendor Profile
 
-Blockfrost is a powerful API platform that gives anyone access to the Cardano Blockchain and functionality without the need to run your own Node. Blockfrost aims to decentralize its Cardano Blockchain API through the Blockfrost Platform and Blockfrost Gateway, enabling a network of Icebreakers operated by SPOs and node operators to process API requests and share revenue. All components are open-sourced to ensure transparency and avoid vendor lock-in.
+Vacuumlabs is a technology company founded in 2013, specializing in fintech product engineering, including blockchain solutions. Within the Cardano ecosystem, they are a significant contributor, known for co-developing the AdaLite and Yoroi wallets, and contributing to Ledger and Trezor hardware wallet support for Cardano. They also incubated and launched WingRiders, a decentralized exchange (DEX) that became a leading platform on Cardano. Furthermore, Vacuumlabs actively engages in smart contract auditing and provides blockchain consulting services for fintech companies looking to integrate with Cardano.
 
 ### Contract Management
 
@@ -122,14 +92,11 @@ The subsections; Contract Management, Project Delivery, and Budget Management To
 
 # References
 
-- [Github budget proposal link request](https://github.com/blockfrost/blockfrost-platform/pull/310)
-- [Github budget proposal rendered version](https://mmahut-2025budget.blockfrost-platform.pages.dev/budget)
-- [Blockfrost.io](https://blockfrost.io/)
-- [Blockfrost platform Github repository](https://github.com/blockfrost/blockfrost-platform)
-- [Icebreakers public Grafana dashboard](https://icebreakers.blockfrost.io/)
-- [Blockfrost.io X account](https://x.com/blockfrost_io)
-- [Project Proposal In Ekklesia](https://2025budget.intersectmbo.org/ballots/680d1b63565577986442d123/proposals/680d1b63565577986442d14a)
-- [Approved Budget Info Action submitted by Intersect](https://gov.tools/outcomes/governance_actions/e14de8d9dc4f4ddf3fe9250a8a926e20f10e99b86bd0610b77d7a054981591ee#0)
+- [Preliminary proposed changes by Ledger team](https://docs.google.com/document/d/1AKwX7xoKL0w4ZX9rK5On1px1kGqC6FOabrlSV2SfrrA/edit?tab=t.0#heading=h.v3zp7ejibdgb)
+- [Ledger App Rewrite Video Explanation](https://drive.google.com/file/d/1K3EqEbhk-hWPGf7FzJ6xXU1TR0ZTxsSX/view)
+- [Link to this item in the TSC List](https://committees.docs.intersectmbo.org/intersect-technical-steering-committee/technical-roadmap/potential-roadmap-projects#ledger-app-rewrite)
+- [Project Proposal In Ekklesia](https://2025budget.intersectmbo.org/ballots/680d1b63565577986442d123/proposals/680d1b63565577986442d202)
+- [Approved Budget Info Action submitted by Intersect via GovTool](https://gov.tools/outcomes/governance_actions/e14de8d9dc4f4ddf3fe9250a8a926e20f10e99b86bd0610b77d7a054981591ee#0)
 - [Details of all successful proposals (CSV)](ipfs://bafybeicwrop4q7xvnyjdd5drumbe56sqtm5lbe2ul3c262zt4hgguzdycm)
 - [Automating Accountability: Cardano's Smart Contract Framework Blog](ipfs://bafybeihqx4ae72z7suqfnxrpqpqithp43cai7o2uuewnqtezgaoyc3ptyq)
 - [Sundae Labs Budget Management Smart Contracts Github Repository](https://github.com/SundaeSwap-finance/treasury-contracts)
