--- a/mainnet/2025-07-13-budget-2025/EC/EC-0012-25-maestro/EC-0012-25.jsonld.md
+++ b/mainnet/2025-07-13-budget-2025/EC/EC-0012-25-maestro/EC-0012-25.jsonld.md
@@ -1,16 +1,26 @@
 # Title
 
-Withdraw ₳1,300,000 for Blockfrost Platform community budget proposal
+Withdraw ₳600,000 for Complete Web3 developer stack to make Cardano the smart...
 
 # Abstract
 
-This treasury withdrawal funds **Blockfrost Platform community budget proposal** which will provide the following services
+This treasury withdrawal funds **Complete Web3 developer stack to make Cardano the smart contract layer for Bitcoin** which will provide the following services:
 
-Blockfrost is a powerful API platform that gives anyone access to the Cardano Blockchain and functionality without the need to run your own Node.
+Maestro proposes a comprehensive infrastructure solution that positions Cardano as Bitcoin's primary smart contract and DeFi execution layer. Leveraging Maestro's enterprise-grade UTXO infrastructure platform, this integration will bridge Bitcoin's substantial liquidity and large user base directly into the Cardano ecosystem.
 
-Our API is designed with developers in mind, and offers tools that remove the complexity of direct node interactions, so anyone can start building on Cardano and launch projects on an affordable, stable and user-friendly framework.
+Maestro's solution will provide a complete suite of developer-friendly infrastructure services and tools, including:
 
-Blockfrost was originally developed by Five Binaries and is now maintained under the IOG umbrella.
+Blockchain Indexer: For real-time blockchain data querying and insights.
+
+- Blockchain Indexer: For real-time blockchain data querying and insights.
+
+- Mempool Monitoring: Enabling developers to detect transactions and on-chain events instantly, even before they are confirmed.
+
+- Event Notification System: Allowing instant webhook alerts for on-chain activities, significantly enhancing the responsiveness of dApps.
+
+- Wallet Manager: Facilitating secure, efficient wallet management, address derivation, and user transaction tracking.
+
+These tools significantly improve the developer experience, dramatically reducing complexity and integration overhead. By abstracting away blockchain complexities, Maestro empowers developers to quickly build and deploy advanced DeFi applications, wallets, and Layer-2 integrations, directly utilizing Bitcoin liquidity.
 
 This Treasury Withdrawal is submitted by Intersect on behalf of the vendor. The following sections; Abstract, Motivation, Rationale and Vendor Profile have been sourced from the approved proposal submitted by the Vendor as part of the Intersect budget process.
 
@@ -20,43 +30,55 @@ This treasury withdrawal funds one of 39 proposals to give effect to the approve
 
 This proposal aims to solve the following problem:
 
-The demand for a reliable infrastructure and tools that support development is what led to the creation of Blockfrost. If you have interacted with the Cardano Blockchain, there is a good chance you were interacting with Blockfrost in the background.
+Maestro will help make Cardano the smart contract layer for Bitcoin.
 
-But this level of adoption has come with some trade-offs. At it's peak, Blockfrost was handling over 50% of all on-chain transactions on Cardano. We recognize this concentration is in contrast to the decentralized nature of the blockchain, and have actively been working to decentralize Blockfrost for the benefit of the Cardano community.
-
-Together with Stake Pool Operators (SPOs) and node operators, we have started the initial phase of what we call the Icebreakers era, an incentivized program designed to decentralize Cardano data access and reward the incredible node operator community.
+Currently, Bitcoin faces inherent limitations in supporting DeFi and advanced smart contracts due to its minimal scripting capabilities and simpler UTXO model. Meanwhile, Cardano, despite being a highly capable smart contract platform leveraging an extended UTXO (EUTXO) model, struggles with attracting Bitcoin's substantial liquidity and integrating directly with Bitcoin's massive economic ecosystem. Without seamless interoperability, both blockchains remain limited: Bitcoin as a largely static asset store and Cardano without access to Bitcoin's immense capital pool and user base. Maestro seeks to address this by bridging the two ecosystems---leveraging Cardano's superior smart contract capabilities to unleash Bitcoin's latent liquidity, thus creating a robust decentralized financial layer powered by Bitcoin's underlying asset security.
 
 # Rationale
 
 ### Project Solution
 
-**The Icebreakers**
+Integrating Maestro's infrastructure to enable Cardano as the smart contract layer for Bitcoin would generate substantial benefits across several layers of the Cardano developer ecosystem:
 
-The Icebreakers is a decentralized network of endpoints that allow developers to access Cardano data through a set of reliable node operators, instead of relying on a single centralized source.
+1. Cardano DeFi Developers:
 
-By joining the Icebreaker program, SPOs and other Cardano node operators can monetize their existing infrastructure by processing API requests as part of the Blockfrost network.
+Developers of DeFi applications (such as lending protocols like Fluidtokens) will gain immediate access to Bitcoin's immense liquidity pool, significantly expanding their potential user base and TVL. Maestro's integration enables developers to tap directly into Bitcoin's economic activity, dramatically increasing capital efficiency and profitability. Demonstrated value includes:
 
-**Deliverables**
+- Significant growth in TVL, user engagement, and protocol revenues.
 
-To ensure transparency and to prevent vendor lock-in, we are open-sourcing all components of the deliverables. This includes the infrastructure, libraries and documentation.
+- Easier user onboarding from Bitcoin-native communities.
 
-Our primary focus is on two key projects: The Blockfrost Platform and the Blockfrost Gateway. Both are designed to expand the capabilities of the Icebreaker network.
+2. Wallet Developers (Tokeo, Begin, Lace, etc.):
 
-**Blockfrost Platform**
+Wallet applications will benefit from vastly expanded user functionality. By supporting direct Bitcoin-to-Cardano interactions, wallets can offer their users advanced features like Bitcoin-backed lending, staking, governance, and seamless cross-chain payments. Demonstrated value includes:
 
-The Blockfrost platform is a next-generation backend designed to run on existing SPO relays, utilizing existing resources and rewarding operators with a share of Blockfrost's current revenue by serving our existing customers.
+- Increased wallet adoption and user retention.
 
-**Blockfrost Gateway**
+- Expanded revenue streams through cross-chain transaction fees and premium DeFi services.
 
-The Blockfrost gateway is the entry point for individual SPOs running the Blockfrost platform. Through the gateway, SPOs can receive requests from Blockfrost users. In return for processing these requests, they earn a share of the revenue.
+3. Layer 2 Solutions and Protocols (Midgard, Sundial, zkFold, BitcoinOS, Midnight):
 
-With the Blockfrost Gateway, anyone can run their own Blockfrost instance with their own platform. We plan to use Hydra to open micro-payment channels between parties, enabling them to exchange ADA or other tokens for their services.
+Cardano's Layer 2 ecosystems will benefit by directly integrating with Bitcoin's user base. L2 solutions gain additional utility and liquidity, allowing their technologies (privacy layers, zero-knowledge rollups, sidechains) to achieve broader adoption and market validation. Demonstrated value includes:
 
-We are also developing the Solitary mode, which is designed for teams that require full ownership of their environment. Developers and enterprise customers can deploy a customized and independent Blockfrost instance with complete control of the infrastructure, uptime and security.
+- Accelerated adoption and developer traction for L2 solutions.
+
+- Enabling innovative financial products and privacy-oriented services previously unavailable to Bitcoin holders.
+
+4. Cardano Ecosystem Overall:
+
+The direct Bitcoin integration positions Cardano uniquely in the broader blockchain landscape. It would transform Cardano into the default execution and innovation layer for Bitcoin DeFi, attracting both institutional and retail adoption. Demonstrated value includes:
+
+- Enhanced market positioning as the leading decentralized finance ecosystem linked to Bitcoin.
+
+- Substantial increase in ecosystem visibility, credibility, and investment inflows.
+
+Ultimately, the proposed integration presents Cardano with an opportunity to become the primary hub for Bitcoin's smart contract innovation and DeFi, unlocking extensive economic value, developer growth, and cross-chain collaboration.
 
 ### Vendor Profile
 
-Blockfrost is a powerful API platform that gives anyone access to the Cardano Blockchain and functionality without the need to run your own Node. Blockfrost aims to decentralize its Cardano Blockchain API through the Blockfrost Platform and Blockfrost Gateway, enabling a network of Icebreakers operated by SPOs and node operators to process API requests and share revenue. All components are open-sourced to ensure transparency and avoid vendor lock-in.
+Maestro has a proven track record of delivering high-performance infrastructure and developer tooling for UTXO-based blockchains, including extensive experience within the Cardano ecosystem. Maestro's platform already supports various high-profile Cardano projects and integrations, successfully handling millions of transactions and servicing numerous applications across DeFi, wallets, analytics, and Layer-2 scaling solutions. The Maestro team comprises seasoned blockchain engineers and industry experts with deep technical expertise in indexing, transaction management, and API development, demonstrating a commitment to high reliability, security, and scalability in enterprise-grade blockchain solutions.
+
+Maestro already supports numerous Cardano projects expanding into Bitcoin (e.g., Fluidtokens lending protocol, Tokeo Wallet, Begin Wallet, Lace Wallet) and Cardano L2s like Midgard, Sundial, zkFold, and BitcoinOS. Recent support for Midnight further expands these possibilities, enabling private DeFi transactions anchored by Bitcoin's economic security.
 
 ### Contract Management
 
@@ -122,14 +144,10 @@ The subsections; Contract Management, Project Delivery, and Budget Management To
 
 # References
 
-- [Github budget proposal link request](https://github.com/blockfrost/blockfrost-platform/pull/310)
-- [Github budget proposal rendered version](https://mmahut-2025budget.blockfrost-platform.pages.dev/budget)
-- [Blockfrost.io](https://blockfrost.io/)
-- [Blockfrost platform Github repository](https://github.com/blockfrost/blockfrost-platform)
-- [Icebreakers public Grafana dashboard](https://icebreakers.blockfrost.io/)
-- [Blockfrost.io X account](https://x.com/blockfrost_io)
-- [Project Proposal In Ekklesia](https://2025budget.intersectmbo.org/ballots/680d1b63565577986442d123/proposals/680d1b63565577986442d14a)
-- [Approved Budget Info Action submitted by Intersect](https://gov.tools/outcomes/governance_actions/e14de8d9dc4f4ddf3fe9250a8a926e20f10e99b86bd0610b77d7a054981591ee#0)
+- [Maestro Website](https://www.gomaestro.org/)
+- [Maestro Documentation](https://docs.gomaestro.org/)
+- [Project Proposal In Ekklesia](https://2025budget.intersectmbo.org/ballots/680d1b63565577986442d123/proposals/680d1b63565577986442d236)
+- [Approved Budget Info Action submitted by Intersect via GovTool](https://gov.tools/outcomes/governance_actions/e14de8d9dc4f4ddf3fe9250a8a926e20f10e99b86bd0610b77d7a054981591ee#0)
 - [Details of all successful proposals (CSV)](ipfs://bafybeicwrop4q7xvnyjdd5drumbe56sqtm5lbe2ul3c262zt4hgguzdycm)
 - [Automating Accountability: Cardano's Smart Contract Framework Blog](ipfs://bafybeihqx4ae72z7suqfnxrpqpqithp43cai7o2uuewnqtezgaoyc3ptyq)
 - [Sundae Labs Budget Management Smart Contracts Github Repository](https://github.com/SundaeSwap-finance/treasury-contracts)
